--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
+    <title> Login page </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     <!-- LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
     </script>
@@ -11,116 +15,126 @@
   </head>
 
 
-  <body>
-    <div id="result"></div>
+  <body class="login_bck">
+
+    <div id="result">
+
+      <div class="login_box">
+
+        <p> Sign in with Google: </p>
+
+        <!-- GOOGLE PLUS SIGN IN BUTTON-->
+        <div id="signinButton">
+          <span class="g-signin"
+            data-scope="openid email"
+            data-clientid="764192518315-8mg5eqa1bhsa7h2c8hvr529gqm05r1fu.apps.googleusercontent.com"
+            data-redirecturi="postmessage"
+            data-accesstype="offline"
+            data-cookiepolicy="single_host_origin"
+            data-callback="signInCallback"
+            data-approvalprompt="force">
+          </span>
+        </div>
 
 
-    <!-- GOOGLE PLUS SIGN IN BUTTON-->
-    <div id="signinButton">
-      <span class="g-signin"
-        data-scope="openid email"
-        data-clientid="764192518315-8mg5eqa1bhsa7h2c8hvr529gqm05r1fu.apps.googleusercontent.com"
-        data-redirecturi="postmessage"
-        data-accesstype="offline"
-        data-cookiepolicy="single_host_origin"
-        data-callback="signInCallback"
-        data-approvalprompt="force">
-      </span>
-    </div>
-
-
-    <script>
-      function signInCallback(authResult) {
-        if (authResult['code']) {
-          // Hide the sign-in button now that the user is authorized
-          $('#signinButton').attr('style', 'display: none');
-          // Send the one-time-use code to the server, if the server responds, write a 
-          // 'login successful' message to the web page and then redirect back to the main page 
-          $.ajax({
-            type: 'POST',
-            url: '/login/google?state={{STATE}}',
-            processData: false,
-            data: authResult['code'],
-            contentType: 'application/octet-stream; charset=utf-8',
-            success: function(result) {
-              // Handle or verify the server response if necessary.
-              if (result) {
-                $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-               setTimeout(function() {
-                window.location.href = "/";
-               }, 1600);
+        <script>
+          function signInCallback(authResult) {
+            if (authResult['code']) {
+              // Hide the sign-in button now that the user is authorized
+              //$('#signinButton').attr('style', 'display: none');
+              // Send the one-time-use code to the server, if the server responds, write a 
+              // 'login successful' message to the web page and then redirect back to the main page 
+              $.ajax({
+                type: 'POST',
+                url: '/login/google?state={{STATE}}',
+                processData: false,
+                data: authResult['code'],
+                contentType: 'application/octet-stream; charset=utf-8',
+                success: function(result) {
+                  // Handle or verify the server response if necessary.
+                  if (result) {
+                    $('#result').html(result)
+                   setTimeout(function() {
+                     window.location.href = '{{URI}}';
+                   }, 1600);
+                    
+                } else if (authResult['error']) {
+              console.log('There was an error: ' + authResult['error']);
+            } else {
+                  $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                   }
+                }
                 
-            } else if (authResult['error']) {
-          console.log('There was an error: ' + authResult['error']);
-        } else {
-              $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-               }
-            }
-            
-        }); } }
-    </script>
-    <!--END GOOGLE PLUS SIGN IN BUTTON -->
+            }); } }
+        </script>
+        <!--END GOOGLE PLUS SIGN IN BUTTON -->
    
 
-    <!--FACEBOOK SIGN IN -->
-    <script>
-      window.fbAsyncInit = function() {
-      FB.init({
-        appId      : '188925008641629',
-        cookie     : true,  // enable cookies to allow the server to access 
-                            // the session
-        xfbml      : true,  // parse social plugins on this page
-        version    : 'v3.0' 
-      });
-      };
-      // Load the SDK asynchronously
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-      // Here we run a very simple test of the Graph API after login is
-      // successful.  See statusChangeCallback() for when this call is made.
-      function sendTokenToServer() {
-        var access_token = FB.getAuthResponse()['accessToken'];
-        console.log(access_token)
-        console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', function(response) {
-          console.log('Successful login for: ' + response.name);
-         $.ajax({
-          type: 'POST',
-          url: '/login/facebook?state={{STATE}}',
-          processData: false,
-          data: access_token,
-          contentType: 'application/octet-stream; charset=utf-8',
-          success: function(result) {
-            // Handle or verify the server response if necessary.
-            if (result) {
-              $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-             setTimeout(function() {
-              window.location.href = "/";
-             }, 1600);
+        <!--FACEBOOK SIGN IN -->
+        <script>
+          window.fbAsyncInit = function() {
+          FB.init({
+            appId      : '188925008641629',
+            cookie     : true,  // enable cookies to allow the server to access 
+                                // the session
+            xfbml      : true,  // parse social plugins on this page
+            version    : 'v3.0' 
+          });
+          };
+          // Load the SDK asynchronously
+          (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));
+          // Here we run a very simple test of the Graph API after login is
+          // successful.  See statusChangeCallback() for when this call is made.
+          function sendTokenToServer() {
+            var access_token = FB.getAuthResponse()['accessToken'];
+            console.log(access_token)
+            console.log('Welcome!  Fetching your information.... ');
+            FB.api('/me', function(response) {
+              console.log('Successful login for: ' + response.name);
+             $.ajax({
+              type: 'POST',
+              url: '/login/facebook?state={{STATE}}',
+              processData: false,
+              data: access_token,
+              contentType: 'application/octet-stream; charset=utf-8',
+              success: function(result) {
+                // Handle or verify the server response if necessary.
+                if (result) {
+                  $('#result').html(result)
+                 setTimeout(function() {
+                   window.location.href = '{{URI}}';
+                 }, 1600);
+                  
+              } else {
+                $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                 }
+              }
               
-          } else {
-            $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-             }
+          });
+            });
           }
-          
-      });
-        });
-      }
-    </script>
-    
-    
-    <button>
-      <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
-      <a href='javascript:sendTokenToServer()'>Login</a>
-      
-      </fb:login-button>
-    </button>
-    <!--END FACEBOOK SIGN IN -->
+        </script>
+       
+
+        <br><br>
+        <p> Sign in with Facebook: </p>
+
+        <button style="padding: 0; margin: 0 0 5% 0;">
+          <fb:login-button size="large" scope="public_profile,email" onlogin="sendTokenToServer();">
+            <a href='javascript:sendTokenToServer()'>Sign in</a>
+          </fb:login-button>
+        </button>
+        <!--END FACEBOOK SIGN IN -->
+
+      </div>
+
+    </div>
 
   </body>
 
