--- a/templates/form_perform.html
+++ b/templates/form_perform.html
@@ -3,7 +3,7 @@
 
 <h1 id="form_title"> {{ play.title }} — add performance </h1>
 
-<form action="#" method="post" class="performance_form" onsubmit="return confirm('Do you really want to submit?');">
+<form id="submit_form" action="#" method="post" class="performance_form" onsubmit="valSubmit();">
 
   <div class="form_questions">
   
@@ -28,16 +28,16 @@
     <div class="form_category">
     <h2> Review </h2>
       <label for="review_title">Review title: </label>
-      <input required id="review_title" name="review_title" type="text" maxlength="100"  placeholder="Review headline">
+      <input required name="review_title" type="text" maxlength="100"  placeholder="Review headline">
       <br><br>
       <label for="review_link">Review link: </label>
-      <input name="review_link" id="review_link" type="text" maxlength="500" placeholder="http://...">
+      <input name="review_link" type="text" maxlength="500" placeholder="http://...">
     </div>
            
     <div class="form_category">
       <h2> Performance date </h2>
       <label for="p_date"> Date: </label>
-      <input required id="p_date" name="p_date" type="text" maxlength="10" placeholder="Day-Month-Year">
+      <input required id="p_date" name="p_date" type="text" maxlength="10" placeholder="DD-MM-YYYY /Day-Month-Year/">
     </div>
   
   </div>
@@ -45,6 +45,43 @@
     <input id="perf_submit" type="submit" value="Submit">
   </div> 
 
-</form>
+</form>  
+
+<script>
+
+  "use strict";
+
+  function valSubmit() {
+ 
+    function valiDate() {
+      // checks if date is given in the correct form - if not: cancel submission (event.returnValue = false)
+      let message = "Please, type the date in the following format: DD-MM-YYYY (eg. 26-04-1564 for 26th of April, 1564)"
+      let pDate = document.getElementById('p_date').value;
+      if ((isNaN(pDate.substring(6))) || (pDate.substring(6) < 1000) || (pDate.substring(6) > 9999)) {
+        alert(message);
+        return event.returnValue = false;
+      } else if ((isNaN(pDate.substring(3,5))) || (pDate.substring(3,5) < 1)  || (pDate.substring(3,5) > 12)) {
+        alert(message);
+        return event.returnValue = false;
+      } else if ((isNaN(pDate.substring(0,2))) || (pDate.substring(0,2) < 1) || (pDate.substring(0,2) > 31)) {
+        alert(message);
+        return event.returnValue = false;
+      } else {
+        return true;
+      }
+    }
+    // if date was given in the correct form ask for confirmation
+    if (valiDate() == true) {
+      let yesNo = confirm('Do you really want to submit?');
+      if (yesNo == true) {
+        return event.returnValue = true;
+      } else {
+        return event.returnValue = false; 
+      }
+    } 
+
+  }
+
+</script>
 
 {% endblock %}
