--- a/templates/form_editPerform.html
+++ b/templates/form_editPerform.html
@@ -6,6 +6,7 @@
 <form action="#" method="post" class="performance_form" onsubmit="valSubmit();">
 
   <div class="form_questions">
+    <input type="hidden" name="user_id" id="user_id" value="{{ perf.user_id }}">
   
     <div class="form_category">
       <h2> Theatre </h2>
