--- a/templates/pp_modify.html
+++ b/templates/pp_modify.html
@@ -91,6 +91,7 @@
                     onsubmit="return confirm('Are you sure you want to delete this entry?');">
                 <input type="hidden" id="perf_reviewID" name="perf_reviewID" value="{{ perf[7] }}">
                 <input type="hidden" id="perfID" name="perfID" value="{{ perf[8] }}">
+                <input type="hidden" id="user_id" name="user_id" value="{{ perf[9] }}">
                 <button id="perf_delete_button" type="submit" value="Submit">
                   <span class="glyphicon glyphicon-remove"></span> Delete
                 </button>
