Restructured auth.py

--- a/templates/form_perform.html
+++ b/templates/form_perform.html
@@ -3,6 +3,8 @@
 
 <h1 id="form_title"> {{ play.title }} — add performance </h1>
 
+<form action="#" method="post" class="performance_form" onsubmit="valSubmit();">
+
   <div class="form_questions">
   
     <div class="form_category">
