corrections of spelling errors

--- a/templates/oeuvre.html
+++ b/templates/oeuvre.html
@@ -97,7 +97,7 @@
               <p class="leftquote"> "He was the man who of all modern, and perhaps ancient poets, had the
                                     largest and most comprehensive soul" 
                                     <br> - John Dryden</p>
-              <p class="rightquote"> "He was a savage… with some imagination. France has not insults, 
+              <p class="rightquote"> "He was a savage… with some imagination. France has no insults, 
                                       fool’s-caps, and pillories enough for such a scoundrel" 
                                       <br> - Voltaire </p>
             </div>
