--- a/static/styles.css
+++ b/static/styles.css
@@ -97,7 +97,7 @@ embed, object, video {
 .categories_body img {
   width: 75%;
   height: 75%;
-  margin: 1% 11% 5% 13%;
+  margin: 1% 11% 4% 13%;
 }
 
 .categories_body_lower {
@@ -113,6 +113,7 @@ embed, object, video {
 /* Style the tab */
 .tab {
     /*border: 1px solid gray;*/
+    background-color: inherit;
     border-bottom: 1px dashed #000000;
     width: 88%;
     margin: 0 0 0 6%; 
@@ -177,7 +178,7 @@ embed, object, video {
 }
 
 .tabcontent li {
-  padding: 2%;
+  padding: 1.5%;
 }
 
 .tabcontent a {
